@@ -9,6 +9,9 @@
 6. Get QtCreator to use QtCurve style for menubar, and for the toolbar in KFileDialog
    (KFileDialog is not 100%, but still looks better...)
 7. Change 'abc [modified] - App' window titles to '*abc - App'
+8. When shading menubars only when active, or using window border colours as menubar
+   colours, the kwin deocration will send an X11 event to the client window when
+   the active window changes - this allws Gtk2 to keep track.
 
 1.3.1
 -----
